# ospsd-team-2

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  client.py  coverage.xml  main.py  plans.md  pyproject.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
docs/: Makefile
docs/source/: CONTRIBUTING.md  DESIGN.md  __init__.py  api.md  conf.py  getting-started.md  index.md
scripts/: docs.py  run_e2e_tests.sh  run_integration_tests.sh
src/aws_client_impl/: README.md  __init__.py  pyproject.toml  s3_client.py
src/aws_client_impl/aws_client_impl/: __init__.py  s3_client.py
src/aws_client_impl/aws_client_impl/tests/: __init__.py
src/aws_client_impl/aws_client_impl/tests/unit/: test_create_bucket.py  test_delete_file.py  test_download_fileobj.py
src/aws_client_impl/src/: __init__.py  s3_client.py
src/aws_client_impl/tests/: __init__.py  conftest.py  test_abort_multipart_upload.py  test_complete_multipart_upload.py  test_create_bucket.py  test_create_multipart_upload.py  test_delete_bucket.py  test_delete_file.py  test_download.py  test_download_fileobj.py  test_get_session.py  test_list_files.py  test_multipart_upload.py  test_s3_client_unit.py  test_upload_file.py  test_upload_obj.py  test_upload_part.py  test_validate_fileObj.py  test_validate_file_obj.py
src/aws_client_impl/tests/unit/: __init__.py  test_create_bucket.py  test_delete_file.py  test_download.py  test_download_fileobj.py
src/cloud_storage_api/: __init__.py  client.py  cloud_object.py
src/cloud_storage_client_api/: README.md  __init__.py  client.py  pyproject.toml
src/cloud_storage_client_api/cloud_storage_client_api/: __init__.py  client.py  factory.py
src/cloud_storage_client_api/src/: __init__.py  client.py
src/cloud_storage_client_api/tests/: conftest.py
src/core/: main.py
src/implementation/: implementation.py
src/ospsd_team_2/: __init__.py
tests/: __init__.py  test_hello.py  test_implementation.py  test_interface.py
tests/aws_client_test/: __init__.py
tests/aws_client_test/integration/: __init__.py  test_s3_contract.py
tests/cloud_storage_test/: __init__.py
tests/cloud_storage_test/integration/: __init__.py  test_interface.py
tests/e2e/: test_main_application.py  test_s3_e2e.py
tests/integration/: test_client_integration.py  test_contract.py
