[project]
name = "ospsd-team-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "2SpaceMasterRace", email = "alphanovachrono@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
