[project]
name = "ospsd-team-2"
version = "0.1.0"
description = "Official project of NYU's Open Source and Software Engineering class"
readme = "README.md"
authors = [
    { name = "Hari Varsha V", email = "hv2241@nyu.edu" },
    { name = "Aarav Agrawal", email = "aa10698@nyu.edu" },
    { name = "Ajay Temal", email = "at5722@nyu.edu" },
    { name = "Daniel J. Barros", email = "djb10118@nyu.edu" },
    { name = "Nicholas Maspons", email = "nem8891@nyu.edu" },
]

requires-python = ">=3.14"
dependencies = [
    "boto3-stubs>=1.42.54",
    "boto3[crt]>=1.42.54",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "src/cloud_storage_client_api",
    "src/aws_client_impl",
]

[tool.uv.sources]
cloud-storage-client-api = { workspace = true }
aws-client-impl = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.16",
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=9.1.0",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = ["src/aws_client_impl/*", "src/cloud_storage_client_api/*"]

[tool.ty.rules]
all = "error"
