[project]
name = "ospsd-team-2"
version = "0.1.0"
description = "Official project of NYU's Open Source and Software Engineering class"
readme = "README.md"
authors = [
    { name = "Hari Varsha V", email = "hv2241@nyu.edu" },
    { name = "Aarav Agrawal", email = "aa10698@nyu.edu" },
    { name = "Ajay Temal", email = "at5722@nyu.edu" },
    { name = "Daniel J. Barros", email = "djb10118@nyu.edu" },
    { name = "Nicholas Maspons", email = "nem8891@nyu.edu" },
]

requires-python = ">=3.14"
dependencies = [
    "boto3-stubs>=1.42.54",
    "boto3[crt]>=1.42.54",
    "coverage>=7.13.4",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "src/cloud_storage_client_api",
    "src/aws_client_impl",
]

[tool.uv.sources]
cloud-storage-client-api = { workspace = true }
aws-client-impl = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.16",
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=9.1.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101"] # Justification: Assertions not only ensure that your program cannot continue to run with bad logic, they also document the expectations better than any comments could.

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"] # Justification: Same as [tool.ruff.lint]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = ["src/aws_client_impl/*", "src/cloud_storage_client_api/*"]

[tool.pytest.ini_options]
pythonpath = [
    ".", 
    "src"
]
testpaths = ["tests", "src/*/tests"]
addopts = ["--cov", "--cov-report=term-missing", "--import-mode=importlib"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
    "regression: marks tests that verify previously fixed bugs have not re-emerged or core functionality hasn't degraded",
    "property: marks property-based tests (using Hypothesis) that generate a wide range of inputs to verify invariant behaviors",
    "e2e: marks tests as end-to-end tests (slow, full system)",
    "circleci: marks tests that can run in CI/CD environments without local credentials",
    "local_credentials: marks tests that require local credentials.json or token.json files",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 80 # Justification: 80% is the sweet spot to make sure the code is well-tasted and not much developer hours are poured into testing. Refer Goodhart's Law.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
