[project]
name = "aws-client-impl"
version = "0.1.0"
description = "AWS S3 implementation of the cloud storage client"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.54",
    "cloud-storage-client-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aws_client_impl"]
